--- a/www/templates/account/myntegral.html
+++ b/www/templates/account/myntegral.html
@@ -7,34 +7,25 @@
     <h1 class="title">我的积分</h1>
   </ion-nav-title>
   <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true" id="myntegral">
+    <ion-refresher on-refresh="getMyNtegral(0)" pulling-text="下拉刷新"></ion-refresher>
     <div class="row-wrap  account-top-bg  myntegral-show">
       <p class="col">当前积分</p>
-      <h1 class="col ">2502578</h1>
+      <h1 class="col ">{{total_point||0}}</h1>
     </div>
-    <div class="row row-center light-bg padding grey">
-      <span class="col-67"><span>19 : 20消费</span><span class="positive">￥5000元</span></span>
-      <span class="col-33 text-right getntegral nowrap"><span>获得</span><span class="positive"> 5000 积分</span></span>
+    <div ng-if="isNotData" class="isNotDataHint">
+      <i class="icon ion-sad"></i>
+      <p>暂无积分</p>
     </div>
-    <p></p>
-    <div class="row row-center light-bg padding grey">
-      <span class="col-67"><span>19 : 20消费</span><span class="positive">￥5000元</span></span>
-      <span class="col-33 text-right getntegral nowrap"><span>获得</span><span class="positive"> 5000 积分</span></span>
-    </div>
-    <p></p>
-    <div class="row row-center light-bg padding grey">
-      <span class="col-67"><span>19 : 20消费</span><span class="positive">￥5000元</span></span>
-      <span class="col-33 text-right getntegral nowrap"><span>获得</span><span class="positive"> 5000 积分</span></span>
-    </div>
-    <p></p>
-    <div class="row row-center light-bg padding grey">
-      <span class="col-67"><span>19 : 20消费</span><span class="positive">￥5000元</span></span>
-      <span class="col-33 text-right getntegral nowrap"><span>获得</span><span class="positive"> 5000 积分</span></span>
-    </div>
-    <p></p>
-    <div class="row row-center light-bg padding grey">
-      <span class="col-67"><span>19 : 20消费</span><span class="positive">￥5000元</span></span>
-      <span class="col-33 text-right getntegral nowrap"><span>获得</span><span class="positive"> 5000 积分</span></span>
+    <div ng-repeat="item in myNtegralList">
+      <div class="row row-center light-bg padding grey">
+        <span class="col-67"><span>{{item.time | date : 'yyyy-MM-dd HH:mm:ss'}}</span><span class="positive">{{item.total_fee | currency :"￥"}}元</span></span>
+        <span class="col-33 text-right getntegral nowrap"><span>获得</span><span class="positive"> {{item.point}}积分</span></span>
+      </div>
+      <p></p>
     </div>
 
+    <ion-infinite-scroll on-infinite="getMyNtegral()" ng-if="total > page"
+                         immediate-check="false">
+    </ion-infinite-scroll>
   </ion-content>
 </ion-view>
