--- a/www/templates/main/productlist.html
+++ b/www/templates/main/productlist.html
@@ -23,7 +23,7 @@
                  id="productlist">
     <ion-slide>
       <ion-content overflow-scroll="false" class="has-tabs-top stable-bg" has-bouncing="true">
-        <!--        <ion-refresher on-refresh="getSaleOrderList(0)" pulling-text="下拉刷新"></ion-refresher>-->
+        <ion-refresher on-refresh="getSynthesize(0)" pulling-text="下拉刷新"></ion-refresher>
         <p></p>
         <ion-list>
           <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
@@ -34,49 +34,11 @@
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
-            <img ng-src="img/main/cp@1.jpg" alt="">
-            <h2>婴幼儿配方奶粉3段</h2>
-            <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
-              class="energized">00</span></span> <i
-              class="col iconfont icon-gouwuche positive text-right"></i></p>
-          </a>
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
-            <img ng-src="img/main/cp@5.jpg" alt="">
-            <h2>婴幼儿配方奶粉3段</h2>
-            <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
-              class="energized">00</span></span> <i
-              class="col iconfont icon-gouwuche positive text-right"></i></p>
-          </a>
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
-            <img ng-src="img/main/cp@3.jpg" alt="">
-            <h2>都市型婴儿四轮推车遮阳车</h2>
-            <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
-              class="energized">00</span></span> <i
-              class="col iconfont icon-gouwuche positive text-right"></i></p>
-          </a>
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
-            <img ng-src="img/main/cp@1.jpg" alt="">
-            <h2>婴幼儿配方奶粉3段</h2>
-            <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
-              class="energized">00</span></span> <i
-              class="col iconfont icon-gouwuche positive text-right"></i></p>
-          </a>
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
-            <img ng-src="img/main/cp@5.jpg" alt="">
-            <h2>婴幼儿配方奶粉3段</h2>
-            <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
-              class="energized">00</span></span> <i
-              class="col iconfont icon-gouwuche positive text-right"></i></p>
-          </a>
+
         </ion-list>
-        <!--        <ion-infinite-scroll  on-infinite="getSaleOrderList()" ng-if="sellparamstotal > sellparamspage" immediate-check="false">
-                </ion-infinite-scroll>-->
+        <ion-infinite-scroll on-infinite="getSynthesize()" ng-if="totalsynthesize > pagesynthesize"
+                             immediate-check="false">
+        </ion-infinite-scroll>
       </ion-content>
     </ion-slide>
     <ion-slide>
@@ -91,32 +53,7 @@
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
-            <img ng-src="img/main/cp@3.jpg" alt="">
-            <h2>都市型婴儿四轮推车遮阳车</h2>
-            <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
-              class="energized">00</span></span> <i
-              class="col iconfont icon-gouwuche positive text-right"></i></p>
-          </a>
 
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
-            <img ng-src="img/main/cp@5.jpg" alt="">
-            <h2>婴幼儿配方奶粉3段</h2>
-            <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
-              class="energized">00</span></span> <i
-              class="col iconfont icon-gouwuche positive text-right"></i></p>
-          </a>
-
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
-            <img ng-src="img/main/cp@3.jpg" alt="">
-            <h2>都市型婴儿四轮推车遮阳车</h2>
-            <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
-              class="energized">00</span></span> <i
-              class="col iconfont icon-gouwuche positive text-right"></i></p>
-          </a>
         </ion-list>
 
       </ion-content>
@@ -135,22 +72,6 @@
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
 
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
-            <img ng-src="img/main/cp@1.jpg" alt="">
-            <h2>婴幼儿配方奶粉3段</h2>
-            <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
-              class="energized">00</span></span> <i
-              class="col iconfont icon-gouwuche positive text-right"></i></p>
-          </a>
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
-            <img ng-src="img/main/cp@3.jpg" alt="">
-            <h2>都市型婴儿四轮推车遮阳车</h2>
-            <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
-              class="energized">00</span></span> <i
-              class="col iconfont icon-gouwuche positive text-right"></i></p>
-          </a>
 
         </ion-list>
       </ion-content>
