--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -10,7 +10,7 @@
   <ion-nav-buttons side="right">
     <button class="button iconfont icon-seach  button-clear grey" ng-click="modal.show()"></button>
   </ion-nav-buttons>
-  <ion-content overflow-scroll="false" has-bouncing="true" >
+  <ion-content overflow-scroll="false" has-bouncing="true">
     <div class="row row-no-padding" id="classify">
       <div class="col-25 stable-bg">
         <ion-list class="list-borderless ">
@@ -21,91 +21,14 @@
         </ion-list>
       </div>
       <div class="col-75">
-        <ion-scroll ng-style="{height:scrollHeight}" direction="y" overflow-scroll="false"  has-bouncing="true">
-          <div id="classify-scroll-content" ng-style="{height:scrollContentHeight}" >
-            <div class="row row-no-padding   text-center row-wrap row-horizontal-around">
-              <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top border-rb">
-               <img ng-src="img/main/cp@2.jpg"  alt=""/>
-               <p>伊利</p>
-             </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-rb">
-               <img ng-src="img/main/cp@5.jpg"  alt=""/>
-               <p>蒙牛</p>
-             </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-b">
-               <img ng-src="img/main/cp@6.jpg"  alt=""/>
-               <p>伊利</p>
-             </a>
-
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
-              <img ng-src="img/main/cp@2.jpg"  alt=""/>
-              <p>伊利</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
-               <img ng-src="img/main/cp@5.jpg"  alt=""/>
-               <p>蒙牛</p>
-             </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top">
-                <img ng-src="img/main/cp@6.jpg"  alt=""/>
-                <p>伊利</p>
-             </a>
-
-            </div>
-            <div class="row row-no-padding text-center row-wrap row-horizontal-around">
-              <p class="stable-bg  full-image text-left classify-details-bar"> 牛奶系列</p>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top border-rb">
-                <img ng-src="img/main/cp@2.jpg"  alt=""/>
-                <p>伊利</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-rb">
-                <img ng-src="img/main/cp@5.jpg"  alt=""/>
-                <p>蒙牛</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-b">
-                <img ng-src="img/main/cp@6.jpg"  alt=""/>
-                <p>伊利</p>
-              </a>
-
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
-                <img ng-src="img/main/cp@2.jpg"  alt=""/>
-                <p>伊利</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
-                <img ng-src="img/main/cp@5.jpg"  alt=""/>
-                <p>蒙牛</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top">
-                <img ng-src="img/main/cp@6.jpg"  alt=""/>
-                <p>伊利</p>
-              </a>
-            </div>
-            <div class="row row-no-padding text-center row-wrap row-horizontal-around">
-              <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top border-rb">
-                <img ng-src="img/main/cp@2.jpg"  alt=""/>
-                <p>伊利</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-rb">
-                <img ng-src="img/main/cp@5.jpg"  alt=""/>
-                <p>蒙牛</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-b">
-                <img ng-src="img/main/cp@6.jpg"  alt=""/>
-                <p>伊利</p>
-              </a>
-
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
-                <img ng-src="img/main/cp@2.jpg"  alt=""/>
-                <p>伊利</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
-                <img ng-src="img/main/cp@5.jpg"  alt=""/>
-                <p>蒙牛</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top">
-                <img ng-src="img/main/cp@6.jpg"  alt=""/>
-                <p>伊利</p>
+        <ion-scroll ng-style="{height:scrollHeight}" direction="y" overflow-scroll="false" has-bouncing="true">
+          <div id="classify-scroll-content" ng-style="{height:scrollContentHeight}">
+            <div class="row row-no-padding   text-center row-wrap ">
+              <!--     <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>-->
+              <a ng-repeat="item in classifyDetails" ng-href="#/productlist/2/{{item.id}}" nav-direction=forward
+                 class="col-33  subdued  padding-top border-rb">
+                <img ng-src="{{item.image}}" alt=""/>
+                <p class="nowrap">{{item.name}}</p>
               </a>
             </div>
           </div>
