--- a/www/templates/shoppingcart.html
+++ b/www/templates/shoppingcart.html
@@ -13,19 +13,19 @@
   <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true" id="shoppingcar">
     <ion-list class="list-borderless" show-delete="shoppingcar.showDelete">
       <p></p>
-      <div ng-repeat="item in shoppingcartdata">
+      <div ng-repeat="item in shoppingcartdata.cartArr">
         <ion-item class="item-thumbnail-left  item-checkbox  item-remove-animate shoppingcart-list">
           <ion-delete-button class="ion-minus-circled"
-                             ng-click="deleteShoppingCart($index)">
+                             ng-click="deleteShoppingCart($index,item.id)">
           </ion-delete-button>
-          <img ng-src="{{item.img}}" alt="" ui-sref="productdetails" nav-direction=forward>
+          <img ng-src="{{item.scGoodsInfo.image}}" alt="" ui-sref="productdetails" nav-direction=forward>
 
-          <h2>{{item.title}}</h2>
-          <p class="text-wrap">{{item.description}}</p>
+          <h2>{{item.scGoodsInfo.goods_name}}</h2>
+          <p class="text-wrap">{{item.scGoodsInfo.goods_intro}}</p>
           <p class="row row-center"><span class="col-60 energized">￥<strong>{{item.price.split('.')[0] }}.</strong><span
             class="energized">{{item.price.split('.')[1]}}</span></span>
             <i class="col icon ion-ios-minus-outline positive " ng-click="minus($index)"></i>
-            <input type="number"  class="col text-center " ng-model="item.num"/>
+            <input type="number"  class="col text-center " ng-model="item.goods_qty"/>
             <i class="col icon ion-ios-plus positive " ng-click="add($index)"></i></p>
           <label class="checkbox">
             <input type="checkbox" ng-checked="false" ng-model="item.checked">
