--- a/www/templates/shoppingcart.html
+++ b/www/templates/shoppingcart.html
@@ -12,21 +12,26 @@
   </ion-nav-buttons>
   <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true" id="shoppingcar">
     <ion-list class="list-borderless" show-delete="shoppingcar.showDelete">
+      <div ng-if="isNotData" class="isNotDataHint">
+        <i class="icon ion-sad"></i>
+        <p>暂无购物商品</p>
+      </div>
       <p></p>
       <div ng-repeat="item in shoppingcartdata.cartArr">
         <ion-item class="item-thumbnail-left  item-checkbox  item-remove-animate shoppingcart-list">
           <ion-delete-button class="ion-minus-circled"
                              ng-click="deleteShoppingCart($index,item.id)">
           </ion-delete-button>
-          <img ng-src="{{item.scGoodsInfo.image}}" alt="" ui-sref="productdetails" nav-direction=forward>
+          <img ng-src="{{item.scGoodsInfo.image}}" alt="" ui-sref="productdetails({id:item.goods_id})"
+               nav-direction=forward>
 
           <h2>{{item.scGoodsInfo.goods_name}}</h2>
           <p class="text-wrap">{{item.scGoodsInfo.goods_intro}}</p>
           <p class="row row-center"><span class="col-60 energized">￥<strong>{{item.price.split('.')[0] }}.</strong><span
             class="energized">{{item.price.split('.')[1]}}</span></span>
-            <i class="col icon ion-ios-minus-outline positive " ng-click="minus($index)"></i>
-            <input type="number"  class="col text-center " ng-model="item.goods_qty"/>
-            <i class="col icon ion-ios-plus positive " ng-click="add($index)"></i></p>
+            <i class="col icon ion-ios-minus-outline positive " ng-click="minusnum($index)"></i>
+            <input type="number" class="col text-center " ng-model="item.goods_qty"/>
+            <i class="col icon ion-ios-plus positive " ng-click="addnum($index)"></i></p>
           <label class="checkbox">
             <input type="checkbox" ng-checked="false" ng-model="item.checked">
           </label>
@@ -45,7 +50,9 @@
       <span class="col text-center">合计 :<span class="assertive">
         ￥<strong>{{shoppingcar.totalPrice.toFixed(2).toString().split('.')[0]}}.</strong>
         <i>{{shoppingcar.totalPrice.toFixed(2).toString().split('.')[1]}}</i></span></span>
-      <button ui-sref="revieworder" ng-disabled="shoppingcar.totalnum==0" class="col button  button-assertive"><strong>结算</strong> <i >( {{shoppingcar.totalnum}} )</i></button>
+      <button ng-click="closeAnAccount()" ng-disabled="shoppingcar.totalnum==0" class="col button  button-assertive">
+        <strong>结算</strong>
+        <i>( {{shoppingcar.totalnum}} )</i></button>
     </div>
   </ion-footer-bar>
 </ion-view>
