元亨祥母婴商城

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -83,7 +83,7 @@
 }
 
 .grey-bg {
-  background-color: #aaa !important;;
+  background-color: #aaa !important;
 }
 
 .bottom-0 {
@@ -243,7 +243,7 @@
 }
 
 .item-thumbnail-left {
-  padding-bottom: 0
+  padding-bottom: 0;
 }
 
 .tab-item .iconfont {
