--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -2,9 +2,9 @@
   <ion-content overflow-scroll="false" class="stable-bg no-nav-header" has-bouncing="true"
                delegate-handle="main-content">
     <div class="row text-center  light row-center " id="main-search">
-      <span class="col-15 nowrap">{{cityName}} <i class="icon ion-arrow-down-b"></i></span>
-      <input type="text" class="col-75" placeholder="  请输入关键字"/>
-      <i class="col   iconfont icon-seach  "></i>
+      <span class="col-15 nowrap" ng-click="openCustomModal()" >{{cityName}} <i class="icon ion-arrow-down-b"></i></span>
+      <input type="text" class="col-75" placeholder="  请输入关键字" ng-click="modal.show()"/>
+      <i class="col   iconfont icon-seach  "  ng-click="modal.show()"></i>
     </div>
     <ion-slide-box show-pager="true" does-continue="true" auto-play="true" slide-interval="3000"
                    delegate-handle="slideboximgs" id="main-slide">
