--- a/www/templates/shoppingcart.html
+++ b/www/templates/shoppingcart.html
@@ -29,9 +29,9 @@
           <p class="text-wrap">{{item.scGoodsInfo.goods_intro}}</p>
           <p class="row row-center"><span class="col-60 energized">￥<strong>{{item.price.split('.')[0] }}.</strong><span
             class="energized">{{item.price.split('.')[1]}}</span></span>
-            <i class="col icon ion-ios-minus-outline positive " ng-click="minusnum($index)"></i>
+            <i class="col icon ion-ios-minus-outline positive " ng-click="minusnum($index,item.id)"></i>
             <input type="number" class="col text-center " ng-model="item.goods_qty"/>
-            <i class="col icon ion-ios-plus positive " ng-click="addnum($index)"></i></p>
+            <i class="col icon ion-ios-plus positive " ng-click="addnum($index,item.id)"></i></p>
           <label class="checkbox">
             <input type="checkbox" ng-checked="false" ng-model="item.checked">
           </label>
