ios平台相关特性

--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-content class="stable-bg" overflow-scroll="false">
+  <ion-content class="stable-bg no-nav-header" overflow-scroll="false">
     <div class="bar item-input-inset light-bg ">
       <button class="button button-clear icon ion-ios-arrow-left grey" ng-click="modal.hide()">
       </button>
